--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="main-content">
             <div class="content-section" id="home">
                 <h1>Online Seminar in Economics + Data Science</h1>
-                <p class="subtitle">Hosted @ ETH Zürich | On Zoom (Meeting ID XX)</p>
+                <p class="subtitle">Hosted @ ETH Zürich | On Zoom (Meeting ID 665 446 5706)</p>
                 
                 <div class="info-card">
                     <h2>Seminar Details</h2>
