--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     
                     <div class="contact-info">
                         <p>To <strong>stay up to date</strong> with all the information, please <a href="https://sympa.ethz.ch/sympa/subscribe/econ.data.sci.online.seminar?previous_action=info" class="link" target="_blank" rel="noopener">join our mailing list.</a></p>
-                        <p>If you are <strong>interested</strong> in presenting in one of our sessions, please register your interest at the following <a href="https://docs.google.com/forms/d/e/1FAIpQLSdNrW0AkV48i9fuVTpyXBFQRHPLhmZKIehB8zTmE0e6SzA6lQ/viewform?usp=header" class="link" target="_blank" rel="noopener">link.</a></p>
-                        <p>For any questions or suggestions, send to Elliott Ash (<a href="mailto:ash@ethz.ch" class="link">ash@ethz.ch</a>), Claudia Marangon (<a href="mailto:cm.claudiamarangon@gmail.com" class="link">cm.claudiamarangon@gmail.com</a>), or Gianmarco Torchetti (<a href="mailto:gtorchetti@ethz.ch" class="link">gtorchetti@ethz.ch</a>)</p>
+                        <p>If you are <strong>interested</strong> in presenting in one of our sessions, send your proposal to Elliott Ash (<a href="mailto:ash@ethz.ch" class="link">ash@ethz.ch</a>), Claudia Marangon (<a href="mailto:cm.claudiamarangon@gmail.com" class="link">cm.claudiamarangon@gmail.com</a>), or Gianmarco Torchetti (<a href="mailto:gtorchetti@ethz.ch" class="link">gtorchetti@ethz.ch</a>)</p>
                     </div>
                 </div>
             </div>
