--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     
                     <div class="contact-info">
                         <p>To <strong>stay up to date</strong> with all the information, please <a href="https://sympa.ethz.ch/sympa/subscribe/econ.data.sci.online.seminar?previous_action=info" class="link" target="_blank" rel="noopener">join our mailing list.</a></p>
-                        <p>If you are <strong>interested</strong> in presenting in one of our sessions, send your proposal to Elliott Ash (<a href="mailto:ash@ethz.ch" class="link">ash@ethz.ch</a>), Claudia Marangon (<a href="mailto:cm.claudiamarangon@gmail.com" class="link">cm.claudiamarangon@gmail.com</a>), or Gianmarco Torchetti (<a href="mailto:gtorchetti@ethz.ch" class="link">gtorchetti@ethz.ch</a>)</p>
+                        <p>If you are <strong>interested</strong> in presenting in one of our sessions, send your proposal to Elliott Ash (<a href="mailto:ash@ethz.ch" class="link">ash@ethz.ch</a>), Claudia Marangon (<a href="mailto:cmarangon@fas.harvard.edu" class="link">cmarangon@fas.harvard.edu</a>), or Gianmarco Torchetti (<a href="mailto:gtorchetti@ethz.ch" class="link">gtorchetti@ethz.ch</a>)</p>
                     </div>
                 </div>
             </div>
@@ -1175,7 +1175,7 @@
                     <div class="organizer">
                         <h3>Claudia Marangon</h3>
                         <p>Harvard University</p>
-                        <p><a href="mailto:cm.claudiamarangon@gmail.com" class="link">cm.claudiamarangon@gmail.com</a></p>
+                        <p><a href="mailto:cmarangon@fas.harvard.edu" class="link">cmarangon@fas.harvard.edu</a></p>
                     </div>
                     <div class="organizer">
                         <h3>Gianmarco Torchetti</h3>
