--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page-wrapper">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h2>Online Seminar in Economics + Data Science</h2>
+                <h2>Economics + Data Science Online Seminar Series</h2>
             </div>
             
             <nav class="sidebar-nav">
