--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <main class="main-content">
             <div class="content-section" id="home">
-                <h1>Online Seminar in Economics + Data Science</h1>
+                <h1>Economics + Data Science Online Seminar Series</h1>
                 <p class="subtitle">Hosted @ ETH Zürich | On Zoom (Meeting ID 687 4823 2997)</p>
                 
                 <div class="info-card">
